--- a/part3/package.json
+++ b/part3/package.json
@@ -7,15 +7,20 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "build:ui": "rm -rf build && cd ../part_2/phonebook/ && npm run build && cp -r build ../../part_3/build",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
     "nodemon": "^3.1.11"
   }
 }
