--- a/part3/package.json
+++ b/part3/package.json
@@ -12,6 +12,7 @@
     "deploy:full": "npm run build:ui && npm run deploy",
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -23,6 +24,9 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.10",
+    "@stylistic/eslint-plugin": "^5.7.1",
+    "eslint": "^9.39.2",
+    "globals": "^17.1.0",
     "nodemon": "^3.1.11"
   }
 }
