--- a/part4/package.json
+++ b/part4/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "test": "jest --verbose"
   },
   "devDependencies": {
     "eslint": "^9.39.2",
@@ -21,6 +21,11 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jest": "^30.2.0",
+    "lodash": "^4.17.23",
     "mongoose": "^9.1.5"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
