--- a/part4/package.json
+++ b/part4/package.json
@@ -21,9 +21,11 @@
     "supertest": "^7.2.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "lodash": "^4.17.23",
     "mongoose": "^9.1.5"
   },
